--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: aqua;">This is todo app</h1>
+    <h1 style="color:black;">This is todo app</h1>
     <div class="container">
-        <h1>todo-list</h1>
+        <h1>Todo-list</h1>
         <input type="text" id="taskinput" placeholder="enter a new task" >
         <button onclick="addTask()">Add task</button>
         <ul id="tasklist"></ul>
