--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Todo-list</h1>
         <input type="text" id="taskInput" placeholder="enter a new task" >
-        <button onclick="addTask()">Add task</button>
+        <button onclick="addTask();">Add task</button>
         <ul id="taskList"></ul>
     </div>
     
