--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: black;">This is todo app</h1>
+    <h1 style="color: rgb(71, 60, 60);">Todo app</h1>
     <div class="container">
         <h1>Todo-list</h1>
         <input type="text" id="taskInput" placeholder="enter a new task" >
-        <button onclick="addTask();">Add task</button>
+        <button onclick= "addTask()" >Add task</button>
         <ul id="taskList"></ul>
     </div>
     
 
 
-    <script src="index.js"></script>
+    <script src="index2.js"></script>
 </body>
 </html>
