finalize the app style

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="color: rgb(71, 60, 60);">Todo app</h1>
+    <h1 style="color:black;">Todo app</h1>
     <div class="container">
         <h1>Todo-list</h1>
         <input type="text" id="taskInput" placeholder="enter a new task" >
